Added OpenACD as a dep to get protobuf compile and recs

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {deps, [
-	{gen_bunny, ".*", {git, "http://github.com/dreid/gen_bunny.git", ""}}
+	{gen_bunny, ".*", {git, "http://github.com/dreid/gen_bunny.git", ""}},
+	{'OpenACD', ".*", {git, "http://github.com/Vagabond/OpenACD.git", ""}}
 ]}.
 {sub_dirs, ["rel"]}.
 {post_hooks, [{compile, "echo \"********************\n* Compile success! *\n********************\""}]}.
