Put mkplugin in a post_compile to make life a bit faster
Also expanded the success message a bit to explain what to do after the
plugin has been compiled.

--- a/rebar.config
+++ b/rebar.config
@@ -3,4 +3,4 @@
 	{'OpenACD', ".*", {git, "http://github.com/Vagabond/OpenACD.git", ""}}
 ]}.
 {sub_dirs, ["rel"]}.
-{post_hooks, [{compile, "echo \"********************\n* Compile success! *\n********************\""}]}.
+{post_hooks, [{compile, "./post_compile.sh"}]}.
