Putting support apps where they need to be.

--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,14 @@
 {deps, [
-	{gen_bunny, ".*", {git, "http://github.com/dreid/gen_bunny.git", ""}},
 	{'OpenACD', ".*", {git, "http://github.com/Vagabond/OpenACD.git", ""}}
 ]}.
 {sub_dirs, ["rel"]}.
+{lib_dirs, ["./contrib/rabbitmq-erlang-client/dist"]}.
+{pre_hooks, [
+	{'get-deps', "./deps.sh get"},
+	{'update-deps', "./deps.sh update"},
+	{'delete-deps', "./deps.sh delete"},
+	{'compile', "make -C contrib/rabbitmq-erlang-client"}
+]}.
 {post_hooks, [{compile, "./post_compile.sh"}]}.
+{src_dirs, ["contrib/rabbitmq-erlang-client/src"]}.
+{erl_opts, [{i, "contrib/rabbitmq-erlang-client/include"}]}.
