Fixing some typos and other build data.

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-	{'OpenACD', ".*", {git, "http://github.com/Vagabond/OpenACD.git", ""}}
+	{'OpenACD', ".*", {git, "http://github.com/OpenACD/OpenACD.git", ""}}
 ]}.
 {sub_dirs, ["rel"]}.
 {lib_dirs, ["./contrib/rabbitmq-erlang-client/dist"]}.
