Setup to use OpenACD embeddable build to aid testing.

--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
 	{'get-deps', "./deps.sh get"},
 	{'update-deps', "./deps.sh update"},
 	{'delete-deps', "./deps.sh delete"},
-	{'compile', "make -C contrib/rabbitmq-erlang-client"}
+	{'compile', "./deps.sh pre_compile"}
 ]}.
 {post_hooks, [{compile, "./post_compile.sh"}]}.
 {src_dirs, ["contrib/rabbitmq-erlang-client/src"]}.
