--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,10 +1,16 @@
 {sys, [
-       {lib_dirs, []},
+       {lib_dirs, ["../deps", "..", "../contrib/rabbitmq-erlang-client/dist"]},
+       {erts, [{mod_cond, derived}, {app_file, strip}]},
        {rel, "oacd_hop", "1",
         [
          kernel,
          stdlib,
-         sasl
+         sasl,
+         mnesia,
+         crypto,
+         public_key,
+         'OpenACD',
+         oacd_hop
         ]},
        {rel, "start_clean", "",
         [
@@ -15,7 +21,15 @@
        {profile, embedded},
        {excl_sys_filters, ["^bin/.*",
                            "^erts.*/bin/(dialyzer|typer)"]},
-       {app, sasl, [{incl_cond, include}]}
+       {app, sasl, [{incl_cond, include}]},
+       {app, stdlib, [{incl_cond, include}]},
+       {app, kernel, [{incl_cond, include}]},
+       {app, mnesia, [{incl_cond, include}]},
+       {app, 'OpenACD', [{incl_cond, include}]},
+       {app, crypto, [{incl_cond, include}]},
+       {app, public_key, [{incl_cond, include}]},
+       {app, amqp_client, [{incl_cond, include}]},
+       {app, oacd_hop, [{incl_cond, include}]}
       ]}.
 
 {target_dir, "oacd_hop"}.
