--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 {deps, [
-	{'OpenACD', ".*", {git, "http://github.com/OpenACD/OpenACD.git", {branch, "embeddable_build_v1"}}}
+	{'OpenACD', "2.*", {git, "http://github.com/OpenACD/OpenACD.git", {branch, "embeddable_build"}}}
 ]}.
 {sub_dirs, ["rel"]}.
 {lib_dirs, ["./contrib/rabbitmq-erlang-client/dist"]}.
